feat: enhance k6 setup and optimize ECS configuration
- Added custom k6 binary with statsd extension in Dockerfile.
- Updated ECS task definition to reduce resource limits.
- Modified ECR repository to mutable tags for flexibility.
- Enabled force flush interval in CloudWatch Logs agent config.
- Adjusted README and shell commands for consistency and usability.

--- a/k6-scripts/Dockerfile
+++ b/k6-scripts/Dockerfile
@@ -1,7 +1,30 @@
-FROM loadimpact/k6:latest
-ENV SCRIPT smoke.js
+# Build stage: compile k6 with the statsd extension
+FROM golang:1.24.7 AS builder
+
+WORKDIR /build
+RUN go install go.k6.io/xk6@latest
+
+# Build a k6 binary with the extension
+RUN xk6 build --with github.com/LeonAdato/xk6-output-statsd
+
+# Final stage: set up the k6 environment
+FROM alpine:3.17
+
+# Install required dependencies
+RUN apk add --no-cache ca-certificates \
+    && update-ca-certificates
+
+# Copy the custom k6 binary from the builder stage
+COPY --from=builder /build/k6 /usr/local/bin/k6
+
+# Make it executable
+RUN chmod +x /usr/local/bin/k6
+
+# Set up the test environment
+ENV SCRIPT=smoke.js
 COPY ./test /test
 WORKDIR /test
-# Override the entry point of the base k6 image
+
+# Override the entry point
 ENTRYPOINT []
-CMD ["sh", "-c", "k6 run --out statsd $SCRIPT"]
+CMD ["sh", "-c", "K6_STATSD_TAG_BLOCKLIST=vu,iter,url,expected_response,method,name,proto,scenario,status,tls_version K6_STATSD_ENABLE_TAGS=true k6 run -o output-statsd $SCRIPT"]
